# doc_assistant

./: .gitignore
llama.cpp/common/: build-info.cpp
md/: _errors.md  _general.md
rag-md/: .env  README.md  docker-compose.yml  pyproject.toml
rag-md/app/: chunking.py  config.py  deps.py  main.py  md_loader.py  models.py  prompts.py  retriever.py  utils.py
rag-md/app/llm_client/: base.py  llama_cpp.py  openai_like.py
rag-md/docs/changelog/: _changelog_changes.md
rag-md/scripts/: ingest_md.py
rag-md/tests/: test_answer.py  test_ingest.py  test_search.py
